feat: add connection profile settings
- Changed extension name to "GuidedGenerations-Extension-test" in index.js and manifest.json.
- Introduced connection profile settings in settings.html, allowing users to select a connection profile.
- Updated presetUtils.js to handle connection profile switching during preset operations.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "GuidedGenerations",
-    "display_name": "Guided Generations Extension",
+    "name": "GuidedGenerationsTest",
+    "display_name": "Guided Generations Extension-test",
     "loading_order": 100,
     "requires": [],
     "optional": [],
