chore: update extension name to "GuidedGenerations-Extension"
- Changed extension name in index.js, manifest.json, and presetUtils.js from "GuidedGenerations-Extension-test" to "GuidedGenerations-Extension".

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "GuidedGenerationsTest",
+    "name": "GuidedGenerations",
     "display_name": "Guided Generations Extension-test",
     "loading_order": 100,
     "requires": [],
