--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "GuidedGenerations",
-    "display_name": "Guided Generations Extension-test",
+    "display_name": "Guided Generations Extension",
     "loading_order": 100,
     "requires": [],
     "optional": [],
