--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "GuidedGenerations",
-    "display_name": "Guided Generations Extension",
+    "name": "GuidedGenerations-test1",
+    "display_name": "Guided Generations Extension-test1",
     "loading_order": 100,
     "requires": [],
     "optional": [],
